--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^18.0.28",
     "@vitejs/plugin-react": "^1.0.7",
+    "typescript": "^5.0.2",
     "vite": "^2.8.0"
   }
 }
